# hsd-agu-egitim

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: soru_cevap_data.md
data/index_store/: documents.pkl
docs/: deployment.md  soru_cevap_data.md
docs/week1/: README.md
docs/week2/: README.md
docs/week3/: README.md
models/: catboost_tuned_pipeline.pkl  lightgbm_tuned_pipeline.pkl
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_feature_engineering.ipynb  GenAI_Fundamentals.ipynb  GenAI_RAG_Agent_Concepts.ipynb
src/backend/: README.md  database.py  feature_eng.py  main.py  model.py  rag_service.py  schemas.py
src/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
src/frontend/src/: App.tsx  index.css
src/frontend/src/components/: Calculator.tsx  ChatWidget.tsx  CreditForm.tsx  Footer.tsx  Navbar.tsx  ResultCard.tsx
src/frontend/src/lib/: api.ts  session.ts
src/frontend/src/pages/: ApplyPage.tsx  CalculatorPage.tsx  HomePage.tsx  InfoPage.tsx
